Fix: section and height, nav z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,7 @@ nav {
   background-color: #f7f7f7;
   background-image: linear-gradient(top, #f7f7f7, #e7e7e7);
   box-shadow: 0px 1px 3px #aaa;
+  z-index: 999;
 }
 
 nav a {
@@ -74,7 +75,7 @@ nav img {
 }
 
 #about {
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 60px);
   width: 100%;
   box-shadow: inset 1px 1px 4px rgb(0 0 0 / 47%);
 }
